...
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YxH-j1-0m1" userLabel="Content view">
                                        <subviews>
                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tf7-Jy-mzk">
                                                <subviews>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EVo-qZ-9Fh" customClass="ZPRoundedButton">
                                                        <color key="backgroundColor" red="0.55294117649999996" green="0.76862745099999996" blue="0.23921568630000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <accessibility key="accessibilityConfiguration" label="Sign in"/>
                                                        <constraints>
                                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" priority="250" constant="280" id="Npb-cB-MBe"/>
                                                            <constraint firstAttribute="height" constant="50" id="WNr-V4-gyA"/>
                                                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="345" id="ZCq-mx-ehw"/>
                                                        </constraints>
                                                        <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="19"/>
...
                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                        <subviews>
                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D9Y-hf-Nob">
                                <subviews>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tws-oR-ItW">
                                        <subviews>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Email address" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uTl-Dy-n7G" customClass="ZPTextField">
                                                <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" label="ZipID Business Code"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="40" id="Epj-CU-u3w"/>
                                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="345" id="n2i-SA-k5C"/>
                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" priority="250" constant="290" id="uVV-0u-RYO"/>
...
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="emailAddress" returnKeyType="next"/>
                                                <connections>
                                                    <outlet property="delegate" destination="WhV-ry-Ybh" id="hEf-Uf-whc"/>
                                                </connections>
                                            </textField>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7bR-dj-6ad" customClass="ZPTextField">
                                                <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" label="Password"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="345" id="99s-t8-8ci"/>
                                                    <constraint firstAttribute="height" constant="40" id="d1v-50-jsz"/>
                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" priority="250" constant="290" id="gFn-ym-sBj"/>
...
